custom login done but messy now isn't neccessary sending de path

--- a/TrainerList/TrainerList.csproj
+++ b/TrainerList/TrainerList.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Filters\authfilter.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Functions\FakeUser.cs" />
     <Compile Include="Functions\ServerComunication.cs" />
