--- a/TrainerList.Tests/TrainerList.Tests.csproj
+++ b/TrainerList.Tests/TrainerList.Tests.csproj
@@ -113,6 +113,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Jobject_test.cs" />
     <Compile Include="Controllers\UserModuleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
